# new_server

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  dev_env.sh  dev_services.sh  readme_wsl.txt  runtime_smoke.bat  setup_vcpkg_auto.bat  setup_windows_oneclick.bat  vcpkg.json
apps/channel_server/: CMakeLists.txt  main.cpp
apps/community_server/: CMakeLists.txt
apps/control_server/: CMakeLists.txt  main.cpp
apps/item_template_import/: CMakeLists.txt  main.cpp
apps/login_server/: CMakeLists.txt  main.cpp
apps/test_client/: CMakeLists.txt  GlobalClients.cpp  LineManager.h  bench_controller.cpp  bench_controller.h  define.h  main.cpp  networkex.cpp  networkex.h
apps/world_server/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  endpoint_app.h  networkex_base.h
src/app/endpoint/: endpoint_app.cpp  endpoint_app.h
src/app/runtime/: networkex_base.h
src/cache/: CMakeLists.txt
src/cache/redis/: redis_cache.cpp  redis_cache.h
src/core/: CMakeLists.txt
src/core/crypto/: sha256.cpp  sha256.h
src/core/log/: common.h
src/core/metrics/: bench_io.h  proc_metrics.h
src/core/util/: common_utils.h  string_utils.h
src/db/: CMakeLists.txt  db_stub.cpp  db_stub.h  db_utils.h  dqs_types.h  odbc_wrapper.cpp  odbc_wrapper.h
src/db/core/: db_utils.h  dqs_payloads.h  dqs_results.h  dqs_types.h
src/db/odbc/: odbc_wrapper.cpp  odbc_wrapper.h
src/db/shard/: db_shard_manager.cpp  db_shard_manager.h
src/net/: CMakeLists.txt  actor_system.cpp  actor_system.h  net.cpp  net_handler.h  tcp_client.cpp  tcp_client.h  tcp_server.h  tcp_session.h
src/net/actor/: actor_system.h
src/net/handler/: net_handler.h
src/net/packet/: msg_header.h
src/net/tcp/: tcp_client.cpp  tcp_client.h  tcp_server.h  tcp_session.h
src/proto/: CMakeLists.txt  packet_util.h  proto.h  types.h
src/proto/client/: login_proto.h  world_proto.h
src/proto/common/: auth_token.h  packet_util.h  proto_base.h  protobuf_packet_codec.h
src/proto/internal/: account_world_proto.h  control_proto.h  login_account_proto.h  login_world_proto.h  world_zone_proto.h
src/proto/schema/: client_login.proto  client_world.proto  common.proto  internal_login_account.proto
src/server_common/: CMakeLists.txt
src/server_common/config/: aoi_config.cpp  aoi_config.h  runtime_config_path.h  runtime_ini_sanity.h  runtime_ini_schema.h  runtime_ini_version.h  server_topology.cpp  server_topology.h
src/server_common/data/: zone_runtime_data.cpp  zone_runtime_data.h
src/server_common/handler/: service_line_handler_base.h
src/server_common/log/: enter_flow_log.h  flow_event_codes.h
src/server_common/registry/: session_char_registry.h
src/server_common/runtime/: line_client_host.h  line_client_start_helper.h  line_descriptor.h  line_host.h  line_host_stats.h  line_registry.h  line_start_helper.h
src/server_common/session/: session_key.h
src/services/account/: CMakeLists.txt
src/services/account/db/: account_auth_db_repository.cpp  account_auth_db_repository.h  account_auth_job.h
src/services/account/handler/: account_login_handler.cpp  account_login_handler.h  account_world_handler.cpp  account_world_handler.h
src/services/account/runtime/: account_line_runtime.cpp  account_line_runtime.h
src/services/account/security/: login_session_token.cpp  login_session_token.h
src/services/channel/: CMakeLists.txt
src/services/channel/actors/: channel_actors.h
src/services/channel/handler/: channel_handler.cpp  channel_handler.h  channel_handler_core.cpp  channel_handler_session.cpp  channel_handler_world_actor.cpp  channel_handler_world_combat.cpp  channel_handler_world_session.cpp  channel_handler_world_zone.cpp
src/services/channel/runtime/: channel_runtime.cpp  channel_runtime.h  channel_session_registry.cpp  channel_session_registry.h
src/services/control/: CMakeLists.txt
src/services/control/handler/: control_handler.cpp  control_handler.h  control_world_handler.cpp  control_world_handler.h
src/services/control/runtime/: control_line_runtime.cpp  control_line_runtime.h
src/services/login/: CMakeLists.txt
src/services/login/handler/: login_account_handler.cpp  login_account_handler.h  login_handler.cpp  login_handler.h  login_world_handler.cpp  login_world_handler.h
src/services/login/runtime/: login_line_runtime.cpp  login_line_runtime.h
src/services/runtime/: CMakeLists.txt  login_auth_types.h  server_runtime_base.cpp  server_runtime_base.h
src/services/world/: CMakeLists.txt
src/services/world/actors/: player_actor.h  world_actor.h  world_actor_ids.h  world_actors.h  zone_actor.h  zone_aoi_types.h
src/services/world/bench/: bench_stats.h
src/services/world/common/: aoi_broadcast_sanitize.h  character_combat_runtime_stats.h  character_combat_stat_calculator.cpp  character_combat_stat_calculator.h  character_core_state.h  character_identity.h  character_presentation.h  character_runtime_hot_state.h  demo_char_state.h  item_stat_provider.cpp  item_stat_provider.h  item_template_table.cpp  item_template_table.h  legacy_item_csv_loader.cpp  legacy_item_csv_loader.h  legacy_level_csv_loader.cpp  legacy_level_csv_loader.h  string_utils.h
src/services/world/db/: item_template_import_repository.cpp  item_template_import_repository.h  item_template_repository.cpp  item_template_repository.h  world_character_repository.cpp  world_character_repository.h
src/services/world/handler/: world_account_handler.cpp  world_account_handler.h  world_control_handler.cpp  world_control_handler.h  world_handler.h  world_handler_actor.cpp  world_handler_combat.cpp  world_handler_core.cpp  world_handler_session.cpp  world_handler_zone.cpp  world_login_handler.cpp  world_login_handler.h  world_zone_handler.cpp  world_zone_handler.h
src/services/world/metrics/: world_metrics.h
src/services/world/runtime/: i_world_runtime.h  world_line_id.h  world_runtime.h  (+12 more)
src/services/zone/: CMakeLists.txt
tests/: CMakeLists.txt  run_ci_ctest.sh  runtime_log_scenario_checks.py  runtime_smoke_world_shutdown.py  smoke_persistence_shutdown.py  world_regression_tests.cpp
(+171 files in other folders)
